# task_manager

./: LICENSE  Makefile  README.md  docker-compose.yml  logstash.conf  prometheus.yml  pyproject.toml
api-gateway/: main.py  requirements.txt
services/auth/: main.py  requirements.txt
services/auth/app/: auth.py  logger.py  models.py  routes.py  schemas.py
services/celery_worker/: Dockerfile  celery_app.py  notifications.py  requirements.txt  task_models.py  tasks.py
services/notifications/: celery_worker.dockerfile  main.py  requirements.txt
services/notifications/app/: celery_app.py  databases.py  models.py  routes.py  schemas.py  tasks.py
services/projects/: main.py  requirements.txt
services/projects/app/: models.py  notifications.py  routes.py  schemas.py
services/tasks/: main.py  requirements.txt
services/tasks/app/: auth.py  cache.py  crud.py  elasticsearch.py  models.py  notifications.py  routes.py  schemas.py
