[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Василий Серебрянников <svaaugust@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
commitizen = "^3.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
